@@ -1,29 +1,25 @@
-package br.com.dio;
-
 import br.com.dio.expcetion.AccountNotFoundException;
 import br.com.dio.expcetion.NotFoundsEnoughException;
 import br.com.dio.expcetion.WalletNotFoundException;
-import br.com.dio.model.AccountWallet;
 import br.com.dio.repository.AccountRepository;
-import br.com.dio.repository.InvestmentRespository;
+import br.com.dio.repository.InvestmentRepository;
 
-import javax.annotation.processing.SupportedSourceVersion;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.Scanner;
-import java.util.stream.Collectors;
-
-import static java.time.format.DateTimeFormatter.ISO_DATE_TIME;
-import static java.util.concurrent.TimeUnit.SECONDS;
 
 public class Main {
 
     private final static AccountRepository accountRepository = new AccountRepository();
-    private final static InvestmentRespository investmentRepository = new InvestmentRespository();
+    private final static InvestmentRepository investmentRepository = new InvestmentRepository();
 
-   static Scanner scanner = new Scanner(System.in);
+    static Scanner scanner = new Scanner(System.in);
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ISO_DATE_TIME;
 
     public static void main(String[] args){
-        System.out.println("Ola seja vem vindo ao DIO bank");
+        System.out.println("Olá, seja bem-vindo ao DIO bank");
         while(true){
             System.out.println("Selecione a operação desejada");
             System.out.println("1 - Criar uma conta");
@@ -31,14 +27,14 @@ public class Main {
             System.out.println("3 - Criar uma carteira de investimento");
             System.out.println("4 - Depositar na conta");
             System.out.println("5 - Sacar da conta");
-            System.out.println("6 - Tranferencia entre contas");
+            System.out.println("6 - Transferência entre contas");
             System.out.println("7 - Investir");
-            System.out.println("8 - Sacar investiento");
+            System.out.println("8 - Sacar investimento");
             System.out.println("9 - Listar contas");
-            System.out.println("10 - Liatar Investimentos");
+            System.out.println("10 - Listar Investimentos");
             System.out.println("11 - Listar carteiras de investimento");
             System.out.println("12 - Atualizar investimentos");
-            System.out.println("13 - Historico de Conta");
+            System.out.println("13 - Histórico de Conta");
             System.out.println("14 - Sair");
             var option = scanner.nextInt();
             switch (option){
@@ -47,7 +43,7 @@ public class Main {
                 case 3 -> createWalletInvestment();
                 case 4 -> deposit();
                 case 5 -> withdraw();
-                case 6 -> tranferToAccount();
+                case 6 -> transferToAccount();
                 case 7 -> incInvestment();
                 case 8 -> rescueInvestment();
                 case 9 ->  accountRepository.list().forEach(System.out::println);
@@ -67,7 +63,7 @@ public class Main {
     private static void createAccount(){
         System.out.println("Informe as chaves pix (separadas por ';')");
         var pix = Arrays.stream(scanner.next().split(";")).toList();
-        System.out.println("Informe o valor inicial de deposito");
+        System.out.println("Informe o valor inicial de depósito");
         var amount = scanner.nextLong();
         var wallet = accountRepository.create(pix, amount);
         System.out.println("Conta criada: " + wallet);
@@ -76,10 +72,10 @@ public class Main {
     private static void createInvestment(){
         System.out.println("Informe a taxa do investimento");
         var tax = scanner.nextInt();
-        System.out.println("Informe o valor inicial de deposito");
+        System.out.println("Informe o valor inicial de depósito");
         var initialFunds = scanner.nextLong();
-       var investment = investmentRepository.create(tax, initialFunds);
-        System.out.println("investimento criado: " + investment);
+        var investment = investmentRepository.create(tax, initialFunds);
+        System.out.println("Investimento criado: " + investment);
     }
 
     private static void withdraw(){
@@ -91,11 +87,11 @@ public class Main {
             accountRepository.withdraw(pix, amount);
         }catch ( NotFoundsEnoughException | AccountNotFoundException ex){
             System.out.println(ex.getMessage());
-      }
+        }
     }
 
     private static void deposit(){
-        System.out.println("Informe a chave pix da conta para deposito");
+        System.out.println("Informe a chave pix da conta para depósito");
         var pix = scanner.next();
         System.out.println("Informe o valor que será depositado: ");
         var amount = scanner.nextLong();
@@ -104,10 +100,9 @@ public class Main {
         }catch (AccountNotFoundException ex){
             System.out.println(ex.getMessage());
         }
-
     }
 
-    private static void tranferToAccount(){
+    private static void transferToAccount(){
         System.out.println("Informe a chave pix da conta de origem:");
         var source = scanner.next();
         System.out.println("Informe a chave pix da conta de destino: ");
@@ -119,7 +114,6 @@ public class Main {
         }catch (AccountNotFoundException ex){
             System.out.println(ex.getMessage());
         }
-
     }
 
     private static void createWalletInvestment(){
@@ -128,8 +122,8 @@ public class Main {
         var account = accountRepository.findByPix(pix);
         System.out.println("Informe o identificador do investimento");
         var investmentId = scanner.nextInt();
-       var investmentWallet = investmentRepository.initInvestment(account, investmentId);
-       System.out.println("Conta de investimento criada: " + investmentWallet);
+        var investmentWallet = investmentRepository.initInvestment(account, investmentId);
+        System.out.println("Conta de investimento criada: " + investmentWallet);
     }
 
     private static void incInvestment(){
@@ -159,18 +153,22 @@ public class Main {
     private static void checkHistory(){
         System.out.println("Informe a chave pix da conta para verificar extrato:");
         var pix = scanner.next();
-        AccountWallet wallet;
         try{
-          var sortedHistory = accountRepository.getHistory(pix);
-          sortedHistory.forEach((k, v) -> {
-              System.out.println(k.format(ISO_DATE_TIME));
-              System.out.println(v.getFirst().transactionId());
-              System.out.println(v.getFirst().description());
-              System.out.println("R$" + (v.size() / 100) + "," + (v.size() % 100));
-          });
+            // Supondo que getHistory retorna Map<LocalDateTime, List<MoneyAudit>>
+            var sortedHistory = accountRepository.getHistory(pix);
+            for (Map.Entry<java.time.LocalDateTime, List<br.com.dio.model.MoneyAudit>> entry : sortedHistory.entrySet()) {
+                java.time.LocalDateTime data = entry.getKey();
+                List<br.com.dio.model.MoneyAudit> lista = entry.getValue();
+                if (!lista.isEmpty()) {
+                    var primeiraTransacao = lista.get(0);
+                    System.out.println(data.format(FORMATTER));
+                    System.out.println(primeiraTransacao.transactionId());
+                    System.out.println(primeiraTransacao.description());
+                    System.out.println("R$" + (lista.size() / 100) + "," + (lista.size() % 100));
+                }
+            }
         } catch (AccountNotFoundException ex){
             System.out.println(ex.getMessage());
         }
     }
-
 }
