@@ -26,7 +26,6 @@ public abstract class Wallet {
     protected List<Money> generateMoney(final long amount, final String description){
         var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
         return Stream.generate(() -> new Money(history)).limit(amount).toList();
-
     }
 
     //É a propriedade para ver quantos de dinheiros temos na nossa conta
@@ -34,29 +33,29 @@ public abstract class Wallet {
         return money.size();
     }
 
-   public void addMoney(final List<Money> money, final BankService service, final String description){
-       var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
-       money.forEach(m -> m.addHistory(history));
-       this.money.addAll(money);
-   }
+    public void addMoney(final List<Money> money, final BankService service, final String description){
+        var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
+        money.forEach(m -> m.addHistory(history));
+        this.money.addAll(money);
+    }
 
-   public List<Money> reduceMoney(final long amount){
+    public List<Money> reduceMoney(final long amount){
         List<Money> toRemove = new ArrayList<>();
         for(int i = 0; i < amount; i++){
-            toRemove.add(this.money.removeFirst());
+            toRemove.add(this.money.remove(0)); // Corrigido aqui!
         }
         return toRemove;
-   }
+    }
 
-   public List<MoneyAudit> getFinancialTransactions(){
+    public List<MoneyAudit> getFinancialTransactions(){
         return money.stream().flatMap(m -> m.getHistory().stream()).toList();
-   }
+    }
 
-   @Override
+    @Override
     public String toString(){
         return "Wallet{" +
                 "service=" + service +
                 ", money= R$" + money.size() / 100 + "," + money.size() % 100 +
                 '}';
-   }
+    }
 }
